# cpu-scheduling

./: .gitignore  CMakeLists.txt  CPU.c  driver.c  list.c  list.h  schedule_fcfs.c  schedule_priority.c  schedule_priority_rr.c  schedule_rr.c  schedule_sjf.c  schedulers.h
